--- a/index.html
+++ b/index.html
@@ -62,26 +62,33 @@
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://sst1107.github.io/club/" class="image fit"><img src="images/5.png" alt=""></a>
 										</div>
+
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+											<a href="https://sst1107.github.io/bar-chart/" class="image fit"><img src="images/bar chart.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+											<a href="https://sst1107.github.io/linechart/" class="image fit"><img src="images/line chart.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
+											<a href="https://sst1107.github.io/Scatter-plot/" class="image fit"><img src="images/Scatter plot.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+											<a href="https://sst1107.github.io/tall/" class="image fit"><img src="images/tall.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+											<a href="https://sst1107.github.io/vue/" class="image fit"><img src="images/vue.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
+											<a href="https://sst1107.github.io/Dynamic-vue/" class="image fit"><img src="images/Dynamic vue.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+											<a href="https://sst1107.github.io/vue2/" class="image fit"><img src="images/vue2.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="https://sst1107.github.io/FormDataPractice/" class="image fit"><img src="images/FormDataPractice.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="https://github.com/SST1107/loanpredictionweb.git" class="image fit"><img src="images/loanpredictionweb.png" alt=""></a>
 										</div>
 									</div>
 								</section>
