--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://github.com/SST1107/loanpredictionweb.git" class="image fit"><img src="images/loanpredictionweb.png" alt=""></a>
 										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="https://github.com/SST1107/vue4.git" class="image fit"><img src="images/vue4.png" alt=""></a>
+										</div>
 									</div>
 								</section>
 							</article>
